--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<h1 style="text-align: center; color: rgb(2, 2, 84);"><i><u>HAPPY ANNIVERSARY!!!</u></i></h1>
+<h1 style="text-align: center; color: rgb(2, 2, 84);"><i><u>HAPPYY ANNIVERSARY!!!</u></i></h1>
 <h3 style="text-align: center; color: rgb(2, 2, 84);"><U><i>HELLO!</i></u></h3>
     <p>HII Riya how are youu, i cant believe its been 1 whole year since i confessed my feelings to you in that ptsd hospital lmao.</p>
     <p>Im soo proud of us for making it this far and i realllyyyy hope theres infinite more years to come because no matter how long i will always want more time with you.</p>
